csv-core/tests/compile_fail/algebra_minting_to_locked.stderr
warning: unused import: `Minting`
 --> tests/compile_fail/algebra_minting_to_locked.rs:6:34
  |
6 | use csv_algebra::state::{Locked, Minting};
  |                                  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ChainId`
 --> tests/compile_fail/algebra_minting_to_locked.rs:7:37
  |
7 | use csv_algebra::transfer::{SealId, ChainId};
  |                                     ^^^^^^^

error[E0308]: mismatched types
  --> tests/compile_fail/algebra_minting_to_locked.rs:26:32
   |
26 |     let _locked = Locked::from(minting); // ERROR: no such method
   |                   ------------ ^^^^^^^ expected `Locked`, found `Minting`
   |                   |
   |                   arguments to this function are incorrect
   |
note: associated function defined here
  --> $RUST/core/src/convert/mod.rs
